[package]
name = "chronograph-macros"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Eric Thill"]
repository = "https://github.com/thill/chronograph"
description = "Macros for chronograph lib"
keywords = ["time", "tracer"]
categories = ["concurrency", "rust-patterns"]
exclude = ["Cargo.lock"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
proc-macro2 = "1.0"
